--- a/templates/index.html
+++ b/templates/index.html
@@ -28,5 +28,12 @@
     <section id="result" class="result-section"></section>
 
     <script src="static/script.js"></script>
+    <script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/sw.js')
+      .then(() => console.log('Service Worker registered'))
+      .catch(err => console.error('Service Worker failed:', err));
+  }
+</script>
 </body>
 </html>
